# kagura-ai

./: .clauderc  .dockerignore  .env.cloud.example  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_JA.md  Caddyfile  Caddyfile.cloud  Dockerfile  LICENSE  LICENSE.txt  Makefile  QUICKSTART.md  README.md  README_JA.md  RELEASE_NOTES_v4.0.0.md  claude_code_input_modes_guide.md  claude_code_modes_guide.md  codecov.yml  cp.sh  docker-compose.cloud.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  sitemap.xml
.github/: BRANCH_POLICY.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
agents/: README.md  youtube_video_summarizer.py
ai_docs/: ARCHITECTURE.md  CODING_MEMORY_DESIGN.md  CONTEXT_ENGINEERING_ANALYSIS.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_GUIDE.md  EXAMPLES_HEALTH_CHECK_REPORT.md  EXAMPLES_HEALTH_CHECK_SUMMARY.md  GLOSSARY.md  HOW_TO_START.md  ISSUE_ORGANIZATION_2025-10-16.md  MCP_SETUP_GUIDE.md  MEMORY_HIERARCHY_INVESTIGATION.md  MEMORY_STRATEGY.md  MIGRATION_GUIDE_v4.4.0.md  NEXT_PLAN_v2.5.0.md  NEXT_STEPS.md  NEXT_STEPS_v2.5_ARCHIVE.md  OAUTH2_TESTING_GUIDE.md  OPENAI_PRICING.md  README.md  REFACTORING_PLAN_V4.3.0.md  RFC_004_VOICE_FIRST_INTERFACE.md  RFC_005_META_AGENT.md  RFC_006_LIVE_CODING.md  RFC_007_MCP_INTEGRATION.md  RFC_011_SCHEDULED_AUTOMATION.md  RFC_014_WEB_INTEGRATION.md  RFC_STATUS.md  ROADMAP_v2.5_ARCHIVE.md  ROADMAP_v3.md  SETUP_GUIDE.md  UNIFIED_ROADMAP.md  V3.0_DEVELOPMENT.md  V3.0_WORK_LOG.md  V4.0_COMPETITIVE_ANALYSIS.md  V4.0_GITHUB_ISSUE_TEMPLATE.md  V4.0_IMPLEMENTATION_ROADMAP.md  V4.0_README_DRAFT.md  V4.0_STRATEGIC_PIVOT.md  VISION.md  (+13 more)
api-reference/: index.html
examples/: README.md  chatbot.py  content_fetcher.py  content_summarizer.py  pyproject.toml  search_planner.py  summarizer.py  user_search_intent_extractor.py
examples/01_basic/: README.md  code_execution.py  config_usage.py  hello_world.py  pydantic_parsing.py  simple_chat.py
examples/02_memory/: README.md  persistent_memory.py  rag_memory.py  session_memory.py  working_memory.py
examples/03_routing/: README.md  keyword_routing.py  memory_aware_routing.py  semantic_routing.py
examples/04_multimodal/: README.md  image_analysis.py  multimodal_rag.py  pdf_processing.py
examples/05_web/: README.md  research_agent.py  web_scraping.py  web_search.py
examples/06_advanced/: README.md  caching_demo.py  full_featured_agent.py  parallel_execution.py  streaming_demo.py
examples/07_presets/: README.md  chatbot_preset.py  code_review_preset.py  content_writer_preset.py  data_analyst_preset.py  learning_tutor_preset.py  personal_assistant_preset.py  project_manager_preset.py  research_preset.py  technical_support_preset.py  translator_preset.py
examples/07_real_world/: code_review_agent.py  content_generator.py  customer_support_bot.py  research_assistant.py
examples/07_real_world/broadlistening_analysis/: README.md  clustering.py  filtering.py  pipeline.py  sample_data.csv  test_pipeline.py
examples/07_real_world/broadlistening_analysis/test_outputs/: result.json
examples/08_real_world/: README.md  code_review_agent.py  content_generator.py  customer_support_bot.py  research_assistant.py
examples/08_real_world/broadlistening_analysis/: README.md  clustering.py  pipeline.py  visualization.py
examples/08_real_world/broadlistening_analysis/test_outputs/: overview.txt
examples/08_sdk_integration/: README.md  email_automation.py  streamlit_dashboard.py
examples/09_personal_tools/: daily_briefing.py  recipe_finder.py
examples/09_sdk_integration/: data_pipeline.py  fastapi_endpoint.py
examples/10_personal_tools/: README.md  event_search.py
examples/advanced_workflows/: README.md  conditional_workflow.py  parallel_workflow.py  retry_workflow.py
examples/agent_builder/: README.md  basic_builder.py  presets.py  with_memory.py  with_tools.py
examples/agents/code_generator/: README.md  agent.py
examples/agents/content_fetcher/: agent.yml  tools.py
examples/agents/data_extractor/: README.md  agent.py
examples/agents/search_planner/: agent.yml
examples/agents/simple_chat/: README.md  agent.py
examples/agents/text_converter/: agent.yml
examples/agents/user_search_intent_extractor/: agent.yml
examples/agents/workflow_example/: README.md  agent.py
examples/chatgpt-workflow/: index.html
examples/claude-workflow/: index.html
examples/memory_routing/: README.md  context_routing.py  semantic_routing.py
examples/multimodal_rag/: README.md  docs_assistant.py
examples/multimodal_rag/sample_docs/: README.md
examples/multimodal_rag/sample_docs/api/: authentication.md
examples/multimodal_rag/sample_docs/diagrams/: architecture.txt
examples/multimodal_rag/sample_docs/guides/: advanced.md  getting-started.md
examples/observability/: README.md  cost_tracking.py  dashboard_demo.py  monitored_agent.py
examples/scripts/: chatbot.py  content_fetcher.py  content_summarizer.py  search_planner.py  summarizer.py  user_search_intent_extractor.py
examples/testing/: README.md  test_basic.py  test_performance.py  test_with_mocks.py
(+979 files in other folders)
