[project]
name = "kagura-ai-examples"
version = "2.5.0"
description = "Real-world examples for Kagura AI"
authors = [
    { name = "JFK", email = "fumikazu.kiyota@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagura-ai>=2.5.0",  # Main library
]

[project.optional-dependencies]
# Broadlistening analysis example dependencies
broadlistening = [
    "umap-learn>=0.5.5",      # Dimensionality reduction
    "scikit-learn>=1.3.0",    # Clustering (KMeans)
    "pandas>=2.0.0",          # Data manipulation
    "plotly>=5.18.0",         # Interactive visualization
    "jupyter>=1.0.0",         # Notebook support
    "kaleido>=0.2.0",         # Static image export for Plotly
]

# All example dependencies
all = [
    "kagura-ai-examples[broadlistening]",
]

[build-system]
requires = ["setuptools>=42.0.0,<69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # No packages, just examples

[tool.pyright]
include = ["08_real_world/broadlistening_analysis"]
exclude = ["**/outputs", "**/__pycache__"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
