[project]
name = "kagura-ai-examples"
version = "3.0.0"
description = "Real-world examples for Kagura AI v3.0"
authors = [
    { name = "JFK", email = "fumikazu.kiyota@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagura-ai>=3.0.0",  # Main library
]

[project.optional-dependencies]
# SDK Integration examples (NEW in v3.0)
sdk = [
    "fastapi>=0.104.0",       # FastAPI integration
    "uvicorn>=0.24.0",        # ASGI server
    "streamlit>=1.28.0",      # Dashboard framework
    "pandas>=2.0.0",          # Data manipulation
    "httpx>=0.25.0",          # HTTP client
]

# Personal Tools examples (NEW in v3.0)
personal = [
    "pandas>=2.0.0",          # Data manipulation
    "rich>=13.0",             # Rich text formatting
]

# Broadlistening analysis example dependencies
broadlistening = [
    "umap-learn>=0.5.5",      # Dimensionality reduction
    "scikit-learn>=1.3.0",    # Clustering (KMeans)
    "pandas>=2.0.0",          # Data manipulation
    "plotly>=5.18.0",         # Interactive visualization
    "jupyter>=1.0.0",         # Notebook support
    "kaleido>=0.2.0",         # Static image export for Plotly
]

# All example dependencies
all = [
    "kagura-ai-examples[sdk]",
    "kagura-ai-examples[personal]",
    "kagura-ai-examples[broadlistening]",
]

[build-system]
requires = ["setuptools>=42.0.0,<69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # No packages, just examples

[tool.pyright]
include = [
    "01_basic",
    "02_memory",
    "03_routing",
    "04_multimodal",
    "05_web",
    "06_advanced",
    "08_real_world",
    "09_sdk_integration",
    "10_personal_tools"
]
exclude = ["**/outputs", "**/__pycache__", "**/test_outputs"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
